REFACTOR: replaced java11 syntax with java8